# zeroclawed

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  BUGFIX-NOTES.md  BUILD-NOTES.md  Cargo.toml  Cross.toml  Dockerfile  LUCIEN-SETUP-NOTES.md  MATRIX-SETUP-NEEDED.md  PROPERTY-TEST-NOTES.md  README.md  ROADMAP.md  install.sh  signal-config-example.toml
crates/adversary-detector/: Cargo.toml  README.md
crates/adversary-detector/examples/: test-adversary.rs
crates/adversary-detector/src/: audit.rs  digest.rs  lib.rs  main.rs  middleware.rs  patterns.rs  profiles.rs  proxy.rs  scanner.rs  verdict.rs
crates/adversary-detector/tests/: scanner_edge_cases.rs
crates/clashd/: Cargo.toml  Dockerfile  README.md
crates/clashd/config/: agents.example.json  agents.json  default-policy.star
crates/clashd/scripts/: activate-policy.sh  install.sh
crates/clashd/src/: domain_lists.rs  lib.rs  main.rs
crates/clashd/src/policy/: engine.rs  eval.rs  mod.rs
crates/host-agent/: ADAPTERS.md  CHANGES-v3-round4.md  CHANGES-v4.md  Cargo.toml  IMPLEMENTATION.md  README.md  SDD-ROUND2-SUMMARY.md  SDD.md  TODO.md  install.sh
crates/host-agent/src/: audit.rs  config.rs  error.rs  main.rs  metrics.rs  perm_warn.rs  rate_limit.rs
crates/host-agent/src/adapters/: exec.rs  git.rs  mod.rs  pct.rs  registry.rs  systemd.rs  zfs.rs
crates/host-agent/src/approval/: identity_plugin.rs  mod.rs  signal.rs  token.rs
crates/host-agent/src/auth/: adapter.rs  identity.rs  mod.rs
crates/host-agent/src/tls/: mod.rs
crates/host-agent/src/zfs/: mod.rs
crates/host-agent/wrappers/: git-safe-wrapper  logrotate-clash-host-agent  pct-create-wrapper  sudoers-clash-agent.template  zfs-destroy-wrapper
crates/nonzeroclaw/: .dockerignore  Cargo.toml  HYBRID-ARCHITECTURE.md  MIGRATION-IMPL-NOTES.md  README.md  VAULT-IMPL-NOTES.md  VENDORING.md
crates/nonzeroclaw/.hegel/constants/: 5e885e7b3c693cd5
crates/nonzeroclaw/config/: policy.star
crates/nonzeroclaw/firmware/zeroclaw-arduino/: zeroclaw-arduino.ino
crates/nonzeroclaw/firmware/zeroclaw-uno-q-bridge/: app.yaml
crates/nonzeroclaw/src/: lib.rs  main.rs  util.rs
crates/nonzeroclaw/src-backup/: lib.rs  main.rs
crates/nonzeroclaw/src-backup/agent/: mod.rs
crates/nonzeroclaw/src-backup/channels/: allowlist_proptest.rs  imessage.rs  signal.rs
crates/nonzeroclaw/src-backup/config/: schema.rs
crates/nonzeroclaw/src-backup/gateway/: mod.rs
crates/nonzeroclaw/src-backup/memory/: mod.rs
crates/nonzeroclaw/src-backup/observability/: mod.rs
crates/nonzeroclaw/src-backup/onboard/: migration.rs  mod.rs  wizard.rs
crates/nonzeroclaw/src-backup/providers/: alloy.rs  anthropic.rs  mod.rs  ollama.rs
crates/nonzeroclaw/src-backup/runtime/: mod.rs
crates/nonzeroclaw/src-backup/security/: leak_detector.rs  pairing.rs  prompt_guard.rs
crates/nonzeroclaw/src-backup/tools/: delegate.rs  mod.rs  schema.rs
crates/nonzeroclaw/src-backup/vault/: adapter.rs  approval.rs  mod.rs
crates/nonzeroclaw/src/agent/: loop_.rs
crates/nonzeroclaw/src/approval/: mod.rs
crates/nonzeroclaw/src/channels/: claude_acp.rs  claude_api.rs  discord.rs  matrix.rs  mod.rs  telegram.rs  whatsapp.rs  whatsapp_allowlist_tests.rs
crates/nonzeroclaw/src/config/: mod.rs  schema.rs
crates/nonzeroclaw/src/gateway/: api.rs  auth_rate_limit.rs  mod.rs  openai_compat.rs
crates/nonzeroclaw/src/heartbeat/: engine.rs
crates/nonzeroclaw/src/observability/: traits.rs
crates/nonzeroclaw/src/onboard/: wizard.rs
crates/nonzeroclaw/src/providers/: alloy.rs  anthropic.rs  mod.rs  ollama.rs  openai.rs  telnyx.rs
crates/nonzeroclaw/src/security/: leak_detector.rs  mod.rs  pairing.rs  prompt_guard.rs
crates/nonzeroclaw/src/tools/: delegate.rs  schema.rs  wrappers.rs
crates/nonzeroclaw/src/tui/: onboarding.rs  widgets.rs
crates/nonzeroclaw/src/vault/: approval.rs  bitwarden.rs  config.rs  error.rs  manager.rs  types.rs
crates/nonzeroclaw/tests/: agent_e2e.rs  agent_loop_robustness.rs  channel_routing.rs  clash_approval_flow.rs  clash_integration_tests.rs  claude_channel_tests.rs  config_persistence.rs  config_schema.rs  hegel_smoke.rs  hooks_integration.rs  imported_upstream_test_component.rs  imported_upstream_test_integration.rs  imported_upstream_test_live.rs  imported_upstream_test_system.rs  memory_comparison.rs  memory_restart.rs  proptest-run-report.md  provider_resolution.rs  provider_schema.rs  telegram_attachment_fallback.rs  whatsapp_webhook_security.rs
crates/nonzeroclaw/tests/failures/: README.md
crates/nonzeroclaw/tests/mutants/: survivors.txt
crates/nonzeroclawed/: Cargo.toml  INSTALLER-IMPL-NOTES.md  WHATSAPP-SETUP.md
crates/nonzeroclawed/examples/: config.toml
crates/nonzeroclawed/src/: auth.rs  commands.rs  config.rs  main.rs  router.rs
crates/nonzeroclawed/src/adapters/: TODO-native-channel.md  acp.rs  mod.rs  openclaw.rs  openclaw_channel.rs  openclaw_native.rs
crates/nonzeroclawed/src/channels/: matrix.rs  mod.rs  signal.rs  telegram.rs  whatsapp.rs
crates/nonzeroclawed/src/hooks/: memory.rs  mod.rs
crates/nonzeroclawed/src/install/: cli.rs  executor.rs  health.rs  json5.rs  migration_types.rs  mod.rs  model.rs  ssh.rs  (+1 more)
crates/onecli-client/: Cargo.toml  VAULT_SETUP.md
crates/onecli-client/src/: bench.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  retry.rs  vault.rs
crates/polyclaw/: Cargo.toml  INSTALLER-IMPL-NOTES.md  WHATSAPP-SETUP.md
crates/polyclaw/examples/: config.toml
crates/polyclaw/src/: auth.rs  commands.rs  config.rs  context.rs  main.rs  router.rs
crates/security-gateway/: Cargo.toml
crates/security-gateway/src/: agent_config.rs  audit.rs  config.rs  credentials.rs  lib.rs  main.rs  proxy.rs  scanner.rs  scanner_test.rs
crates/security-gateway/tests/: integration.rs
crates/zeroclawed/: Cargo.toml  INSTALLER-IMPL-NOTES.md  WHATSAPP-SETUP.md
crates/zeroclawed/examples/: config.toml
crates/zeroclawed/src/: auth.rs  commands.rs  config.rs  context.rs  context_loom_test.rs  delegation.md  delegation.rs  main.rs  router.rs
crates/zeroclawed/tests/: delegation_integration.rs  loom.rs
(+203 files in other folders)
