[workspace]

matrix-sdk = { path = "vendor/matrix-sdk" }

members = [
    "crates/polyclaw",
    "crates/nonzeroclaw",
    "crates/outpost",
    "crates/clash",
    "crates/robot-kit",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async traits
async-trait = "0.1"

# Regex
regex = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# UUID
uuid = { version = "1", features = ["v4", "std"] }

# Shared workspace crates
outpost = { path = "crates/outpost" }
clash   = { path = "crates/clash" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
codegen-units = 8

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
matrix-sdk = { path = "vendor/matrix-sdk" }
