[package]
name = "adversary-detector"
version = "0.1.0"
edition = "2021"
description = "ZeroClawed — Adversarial content detection and scanning"
license = "MIT"

[dependencies]
regex = "1"
aho-corasick = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
once_cell = "1"
async-trait = "0.1"
sha2 = "0.10"
axum = { version = "0.7", features = ["tokio", "http1"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
tempfile = "3"

[[bin]]
name = "adversary-detector"
path = "src/main.rs"
