[package]
name = "clashd"
version = "0.1.0"
edition = "2021"
description = "Policy sidecar for OpenClaw - evaluates tool calls before execution"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "5"

# TODO: Add actual clash policy engine integration
# clash = { path = "../clash" }
