[package]
name = "clashd"
version = "0.1.0"
edition = "2021"
description = "Policy sidecar for OpenClaw - evaluates tool calls using Starlark"

[lib]
name = "clashd"
path = "src/lib.rs"

[[bin]]
name = "clashd"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "5"
starlark = "0.13"
tempfile = "3"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"

[dev-dependencies]
tokio-test = "0.4"