[package]
name = "nonzeroclaw"
version = "0.1.0"
edition = "2021"
authors = ["PolyClaw Contributors"]
license = "MIT OR Apache-2.0"
description = "NonZeroClaw — opinionated first-party agent for the PolyClaw ecosystem. OpenAI-compatible HTTP agent with outpost scanning and clash policy stubs."
repository = "https://github.com/polyclaw/nonzeroclaw"
readme = "README.md"
keywords = ["ai", "agent", "polyclaw", "openai-compatible", "safety"]
categories = ["command-line-utilities", "api-bindings"]
rust-version = "1.87"

[dependencies]
# Upstream zeroclawlabs — used for passthrough modules we don't modify
# Optional for now so it doesn't break the build; activate once we wire passthrough modules.
zeroclawlabs = { version = "0.4", optional = true, default-features = false }

# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime - feature-optimized for size
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }

# Matrix client + E2EE decryption
matrix-sdk = { version = "0.16", optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls", "markdown", "sqlite"] }

# Workspace internal crates
outpost = { path = "../outpost" }
clash   = { path = "../clash" }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Config
directories = "6.0"
toml = "1.0"
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Observability - Prometheus metrics
prometheus = { version = "0.14", default-features = false }

# Base64 encoding (screenshots, image data)
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# URL encoding for web search
urlencoding = "2.1"

# Optional Rust-native browser automation backend
fantoccini = { version = "0.22.0", optional = true, default-features = false, features = ["rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID generation
uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.10"

# serde-big-array for wa-rs storage (large array serialization)
serde-big-array = { version = "0.5", optional = true }

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = "0.17"

# Protobuf encode/decode (Lark WS frame codec, WhatsApp storage)
prost = { version = "0.14", default-features = false, features = ["derive"], optional = true }

# Memory / persistence
rusqlite = { version = "0.37", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
cron = "0.15"

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# Hardware discovery (device path globbing)
glob = "0.3"

# Binary discovery (init system detection)
which = "8.0"

# WebSocket client channels (Discord/Lark/DingTalk/Nostr)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip04", "nip59"] }
regex = "1.10"
hostname = "0.4.2"
rustls = "0.23"
rustls-pki-types = "1.14.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"

# email
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11.2"
async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"] }
http-body-util = "0.1"

# Embed frontend assets into binary (web dashboard)
rust-embed = "8"
mime_guess = "2"

# OpenTelemetry — OTLP trace + metrics export.
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"], optional = true }

# Serial port for peripheral communication (STM32, etc.)
tokio-serial = { version = "5", default-features = false, optional = true }

# USB device enumeration (hardware discovery) — only on platforms nusb supports
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
nusb = { version = "0.2", default-features = false, optional = true }

# probe-rs for STM32/Nucleo memory read (Phase B)
probe-rs = { version = "0.31", optional = true }

# PDF extraction for datasheet RAG (optional, enable with --features rag-pdf)
pdf-extract = { version = "0.10", optional = true }

# WhatsApp Web client (wa-rs) — optional, enable with --features whatsapp-web
wa-rs = { version = "0.2", optional = true, default-features = false }
wa-rs-core = { version = "0.2", optional = true, default-features = false }
wa-rs-binary = { version = "0.2", optional = true, default-features = false }
wa-rs-proto = { version = "0.2", optional = true, default-features = false }
wa-rs-ureq-http = { version = "0.2", optional = true }
wa-rs-tokio-transport = { version = "0.2", optional = true, default-features = false }

# Raspberry Pi GPIO / Landlock (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }
landlock = { version = "0.4", optional = true }

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# Passthrough modules re-exported from the upstream zeroclawlabs crate.
# Enable to pull upstream fixes for non-vendored modules via `cargo update`.
# See HYBRID-ARCHITECTURE.md for the full passthrough plan.
zeroclawlabs = ["dep:zeroclawlabs"]
hardware = ["nusb", "tokio-serial"]
channel-matrix = ["dep:matrix-sdk"]
channel-lark = ["dep:prost"]
memory-postgres = ["dep:postgres"]
observability-otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]
peripheral-rpi = ["rppal"]
browser-native = ["dep:fantoccini"]
fantoccini = ["browser-native"]
sandbox-landlock = ["dep:landlock"]
sandbox-bubblewrap = []
landlock = ["sandbox-landlock"]
probe = ["dep:probe-rs"]
rag-pdf = ["dep:pdf-extract"]
whatsapp-web = ["dep:wa-rs", "dep:wa-rs-core", "dep:wa-rs-binary", "dep:wa-rs-proto", "dep:wa-rs-ureq-http", "dep:wa-rs-tokio-transport", "dep:serde-big-array", "dep:prost"]

[dev-dependencies]
tempfile = "3.14"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
proptest = "1.0"

[[bin]]
name = "nonzeroclaw"
path = "src/main.rs"

[[bench]]
name = "agent_benchmarks"
harness = false
