[package]
name = "nonzeroclawed"
version = "0.1.0"
edition = "2021"
description = "NonZeroClawed v2 — Rust agent gateway (ZeroClaw fork)"
license = "MIT"

[[bin]]
name = "nonzeroclawed"
path = "src/main.rs"

[features]
channel-matrix = ["dep:matrix-sdk"]

[dependencies]
axum = "0.7"
# Async runtime
tokio = { version = "1", features = ["full", "net"] }

# Crypto (for Signal channel)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Matrix
matrix-sdk = { version = "0.16", optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls", "markdown", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Telegram
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# ACP (Agent Client Protocol) - for coding agent integration
sacp = "6"
sacp-tokio = "6"
tokio-util = { version = "0.7", features = ["compat"] }

# Home directory expansion
home = "0.5"

# Outpost module (shared workspace crate)
outpost = { path = "../outpost" }

# TUI wizard
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
base64 = "0.22"

# Timestamp generation
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
hegeltest = { git = "https://github.com/hegeldev/hegel-rust" }
tempfile = "3"
