[package]
name = "polyclaw"
version = "0.1.0"
edition = "2021"
description = "PolyClaw v2 — Rust agent gateway (ZeroClaw fork)"
license = "MIT"

[[bin]]
name = "polyclaw"
path = "src/main.rs"

[features]
channel-matrix = ["dep:matrix-sdk"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Matrix
matrix-sdk = { version = "0.16", optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls", "markdown", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# Telegram
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# ACP (Agent Client Protocol) - for coding agent integration
sacp = "6"
sacp-tokio = "6"
tokio-util = { version = "0.7", features = ["compat"] }

# Home directory expansion
home = "0.5"

# Outpost module (shared workspace crate)
outpost = { path = "../outpost" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
