[package]
name = "security-gateway"
version = "0.1.0"
edition = "2021"
description = "ZeroClawed — Mandatory security proxy for agent traffic"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio", "http1", "http2"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
adversary-detector = { path = "../adversary-detector" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = { version = "0.13", features = ["pem"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
bytes = "1"
http = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
regex = "1"

[[bin]]
name = "security-gateway"
path = "src/main.rs"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
